# videoSignalProcessing

./: CMakeLists.txt  CMakePresets.json  README.md  build_win.ps1  config.yaml  config_win.ps1  run.sh  run_win.ps1  unsafe_build.sh  video_processing — копия (2).proto  Масштабируемая система для обработки видео на базе ZeroMQ.docx
Doc/: 2 Uml Diagram (не) правильные стрелочки.xml  2 Uml Diagram.xml  3+Uml+Diagram (не) правильные стрелочки.xml  3+Uml+Diagram.xml  ImageStructure.hpp  diagram (3).json  diagram (4).json  diagram (5).json  video_processing (2).proto  Система Распределенной Обработки Видео Сигнала (РОВс).docx
example/connection/: CMakeLists.txt  README.md  clt_recv.cpp  clt_send.cpp  main.cpp  srv_recv.cpp  srv_send.cpp
example/connection/.cache/clangd/index/: ImageStructure.hpp.EE7430CF2CF47CC0.idx  clt_recv.cpp.98F89F56107824AA.idx  main.cpp.FA9BFEA5FBF9C587.idx  srv_send.cpp.EA69959CA92F4272.idx  test.cpp.57062C78F1873ABA.idx  test1.cpp.4EFA5B77EB67FA95.idx  test2.cpp.4B8C427154E6B95E.idx
postProcessor/bypass/: postProcessor.cpp  postProcessor.h
postProcessor/realisation/: postProcessor.cpp  postProcessor.h
postProcessor/realization/: postProcessor.cpp  postProcessor.h
server/: server.cpp
server/bypass/: server.cpp
server/realisation/: server.cpp  server.h
server/realization/: server.cpp  server.h
utils/bypass/: utils.cpp  utils.h
utils/realisation/: utils.cpp  utils.h
utils/realization/: main.cpp  utils.cpp  utils.h
worker/bypass/: worker.cpp  worker.h
worker/realisation/: scanner_darkly_effect.hpp
worker/realization/: !-worker.txt  ImageStructure.hpp  Worker.cpp  worker.cpp  worker.h
